WP.org P2: Prevent action links (Reply/Follow/Log in) from overlapping page content.
git-svn-id: https://meta.svn.wordpress.org/sites/trunk@50 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-p2/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-p2/style.css
@@ -158,6 +158,17 @@ html h4 {
 	padding:0 10px !important;
 }
 
+/* Fix styling of action links which can clash with the content below it */
+#main h4 {
+	position: static;
+}
+#main ul#postlist li {
+	position: relative;
+}
+#main span.meta span.actions {
+	top: 6px;
+}
+
 /*- bbPress Specific Styles ----------*/
 
 body.bbPress #main ul#postlist li {
